# p4haskell

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  firewall.json  firewall.p4  floskell.json  hie.yaml  make_rules.py  midend_ir.json  p4haskell.cabal  package.yaml  port-forward.json  port-forwarding-2.json  port-forwarding.p4  stack.yaml  weeder.dhall
app/: Main.hs
src/: P4Haskell.hs  P4haskell.hs  Prelude.hs
src/P4Haskell/Compile/: Codegen.hs  Declared.hs  Eff.hs  Fetch.hs  Opts.hs  Query.hs  Rules.hs  Scope.hs
src/P4Haskell/Compile/Codegen/: Action.hs  Codegen.hs  Expression.hs  Expression.hs-boot  Extern.hs  MethodCall.hs  MethodCall.hs-boot  Parser.hs  Statement.hs  Statement.hs-boot  Tables.hs  Tables.hs-boot  Typegen.hs  Typegen.hs-boot  Utils.hs
src/P4Haskell/Types/: AST.hs  DecompressJSON.hs  IR.hs  P4AST.hs
src/P4Haskell/Types/AST/: AST.hs  ActionList.hs  ActionList.hs-boot  Annotation.hs  Annotation.hs-boot  Core.hs  DeclarationID.hs  DecompressJSON.hs  Expression.hs  MapVec.hs  Method.hs  Method.hs-boot  Parameter.hs  Parameter.hs-boot  Path.hs  SelectKey.hs  Statement.hs  Table.hs  Table.hs-boot  Types.hs
src/P4Haskell/Types/IR/: Expression.hs  Param.hs  Statement.hs  TopLevel.hs
src/P4Haskell/Utils/: Drill.hs
src/Polysemy/: EndState.hs
src/Polysemy/Reader/: More.hs
